# Anyffmpeg

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dds/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/dds/ffmpeg/: FFMpeg.java  MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dds/ffmpeg/: ExampleUnitTest.java
ffmpeg_build/: ffmpeg_build.sh
